# html2LaTeX

./: .autotools  .clang-format  .codechecker_skip  .cproject  .gitignore  .gitmodules  .project  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.clang  Dockerfile.gcc  Jenkinsfile  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.status  configure  configure.ac  sonar-project.properties  sonarcloud.properties
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  ProgramOptions.cpp  ProgramOptions.hpp  html2LaTeX.cpp  main.cpp
src/HTML/: CMakeLists.txt  HTMLTree.cpp  HTMLTree.hpp  HTMLTreeElement.cpp  HTMLTreeElement.hpp  HTMLTreeElementInterface.cpp  HTMLTreeElementInterface.hpp  HTMLTreeInterface.cpp  HTMLTreeInterface.hpp  HTMLTypes.cpp  HTMLTypes.hpp
src/HTML/DOM/: AbortController.hpp  AbortController.idl  AbortSignal.hpp  AbortSignal.idl  AbstractWorker.hpp  ApplicationCache.cpp  ApplicationCache.hpp  ArrayBuffer.hpp  ArrayBufferView.hpp  Attr.hpp  Attr.idl  AudioTrack.hpp  AudioTrack.idl  AudioTrackList.cpp  AudioTrackList.hpp  BarProp.hpp  BeforeUnloadEvent.hpp  Blob.hpp  Blob.idl  BroadcastChannel.cpp  BroadcastChannel.hpp  BufferSource.hpp  ByteString.hpp  CDataSection.hpp  CDataSection.idl  CMakeLists.txt  CSSOMString.hpp  CSSRule.hpp  CSSRule.idl  CSSRuleList.hpp  CSSRuleList.idl  CSSStyleDeclaration.hpp  CSSStyleDeclaration.idl  CSSStyleSheet.hpp  CSSStyleSheet.idl  CanvasCompositing.hpp  CanvasDrawImage.cpp  CanvasDrawImage.hpp  CanvasDrawPath.cpp  CanvasDrawPath.hpp  (+416 more)
src/HTML/DOM_Interfaces/: CMakeLists.txt
src/HTML/Elements/: CMakeLists.txt  Element.cpp  Element.hpp
src/HTML/Elements/EscapableRawText/: CMakeLists.txt  EscapableRawText.cpp  EscapableRawText.hpp  TextArea.cpp  TextArea.hpp  Title.cpp  Title.hpp
src/HTML/Elements/Foreign/: CMakeLists.txt  Foreign.cpp  Foreign.hpp
src/HTML/Elements/Normal/: A.cpp  A.hpp  Abbr.cpp  Abbr.hpp  Address.cpp  Address.hpp  Article.cpp  Article.hpp  Aside.cpp  Aside.hpp  Audio.cpp  Audio.hpp  B.cpp  B.hpp  Bdi.cpp  Bdi.hpp  Bdo.cpp  Bdo.hpp  BlockQuote.cpp  BlockQuote.hpp  Body.cpp  Body.hpp  Button.cpp  Button.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Caption.cpp  Caption.hpp  Cite.cpp  Cite.hpp  Code.cpp  Code.hpp  ColGroup.cpp  ColGroup.hpp  Data.cpp  Data.hpp  DataList.cpp  DataList.hpp  Dd.cpp  (+139 more)
src/HTML/Elements/RawText/: CMakeLists.txt  RawText.cpp  RawText.hpp  Script.cpp  Script.hpp  Style.cpp  Style.hpp
src/HTML/Elements/Void/: Area.cpp  Area.hpp  Base.cpp  Base.hpp  Br.cpp  Br.hpp  CMakeLists.txt  Col.cpp  Col.hpp  Embed.cpp  Embed.hpp  Hr.cpp  Hr.hpp  Img.cpp  Img.hpp  Input.cpp  Input.hpp  Keygen.cpp  Keygen.hpp  Link.cpp  Link.hpp  Meta.cpp  Meta.hpp  Param.cpp  Param.hpp  Source.cpp  Source.hpp  Track.cpp  Track.hpp  Void.cpp  Void.hpp  Wbr.cpp  Wbr.hpp
src/HTML/Microsyntaxes/: ASCII.cpp  ASCII.hpp  CMakeLists.txt  SignedInteger.cpp  SignedInteger.hpp
src/HTML/Microsyntaxes/ASCII/: ASCII.cpp  ASCII.hpp  CMakeLists.txt
src/HTML/Microsyntaxes/Dates/: CMakeLists.txt  Dates.cpp  Dates.hpp  Durations.cpp  Durations.hpp  FloatingDatesAndTimes.cpp  FloatingDatesAndTimes.hpp  GlobalDatesAndTimes.cpp  GlobalDatesAndTimes.hpp  Months.cpp  Months.hpp  TimeZones.cpp  TimeZones.hpp  Times.cpp  Times.hpp  VaguerMomentsInTime.cpp  VaguerMomentsInTime.hpp  Weeks.cpp  Weeks.hpp  YearlessDates.cpp  YearlessDates.hpp
src/HTML/Microsyntaxes/Numbers/: CMakeLists.txt  Dimension.cpp  Dimension.hpp  FloatingPoint.cpp  FloatingPoint.hpp  ListsOfDimensions.cpp  ListsOfDimensions.hpp  ListsOfIntegers.cpp  ListsOfIntegers.hpp  NonNegativeInteger.cpp  NonNegativeInteger.hpp  NumbersMisc.cpp  NumbersMisc.hpp  NumbersTypes.cpp  NumbersTypes.hpp  SignedInteger.cpp  SignedInteger.hpp
src/HTML/Parse/: CMakeLists.txt  DetermineCharEncoding.cpp  DetermineCharEncoding.hpp  DetermineCharEncodingAlgorithm.dot  DetermineCharEncodingAlgorithmGetAttribute.dot  MagicString.cpp  MagicString.hpp  ParseHTML.cpp  ParseHTML.hpp  ParseTypes.cpp  ParseTypes.hpp  ParseUnicode.cpp  ParseUnicode.hpp
src/HTML/WebAPI/: AbstractWorker.hpp  ApplicationCache.hpp  ApplicationCache.idl  AudioTrack.hpp  AudioTrackList.hpp  AudioTrackList.idl  BarProp.hpp  BeforeUnloadEvent.hpp  BroadcastChannel.hpp  BroadcastChannel.idl  CMakeLists.txt  CanvasRenderingContext2D.hpp  CanvasRenderingContext2D.idl  CloseEvent.hpp  CustomElementRegistry.hpp  CustomElementRegistry.idl  DOMStringList.hpp  DOMStringMap.hpp  DOMStringMap.idl  DataTransfer.hpp  DataTransferItem.hpp  DataTransferItemList.hpp  DedicatedWorkerGlobalScope.hpp  Document.idl  DocumentAndElementEventHandlers.hpp  DragEvent.hpp  DragEvent.idl  ElementContentEditable.hpp  ErrorEvent.hpp  EventHandler.hpp  EventHandler.idl  EventSource.hpp  EventSource.idl  External.hpp  GlobalEventHandlers.hpp  GlobalEventHandlers.idl  HTMLAllCollection.hpp  HTMLAllCollection.idl  HTMLAnchorElement.hpp  HTMLAreaElement.hpp  (+175 more)
src/LaTeX/: CMakeLists.txt  ConcreteUnicodeToLaTeX.hpp  ConcreteUnicodeToLaTeXConversionArray.hpp  GenerateLaTeX.cpp  GenerateLaTeX.hpp  LaTeXOStream.cpp  LaTeXOStream.hpp  LaTeXTreeInterface.cpp  LaTeXTreeInterface.hpp  LaTeXTypes.hpp  UnicodeToLaTeX.cpp  UnicodeToLaTeX.hpp  UnicodeToLaTeXConversionArray.json  UnicodeToLaTeXInterface.hpp
src/ParseHTML/: DetermineCharEncoding.cpp  DetermineCharEncoding.hpp  MagicString.cpp  MagicString.hpp  output.ps
test/: .gitignore  CMakeLists.txt  GoogleTest.cmake.in  Makefile.am  Makefile.in  main_test.cpp
test/HTML/: CMakeLists.txt  HTMLTreeElement_test.cpp  HTMLTreeInterface_test.cpp  HTMLTree_test.cpp  HTMLTypes_test.cpp
test/HTML/Elements/: CMakeLists.txt  Element_test.cpp
test/HTML/Elements/Normal/: A_test.cpp  (+89 more)
test/HTML/Microsyntaxes/: ASCII_test.cpp  CMakeLists.txt
test/HTML/Parse/: CMakeLists.txt  DetermineCharEncoding_test.cpp  MagicString_test.cpp  ParseHTML_test.cpp  ParseTypes_test.cpp  ParseUnicode_test.cpp
test/LaTeX/: CMakeLists.txt  GenerateLaTeX_test.cpp  LaTeXOStream_test.cpp  UnicodeToLaTeX_test.cpp
test/ParseHTML/: DetermineCharEncoding_test.cpp  MagicString_test.cpp
(+111 files in other folders)
