add_library(DOM STATIC "")
target_sources(DOM
	PUBLIC		
		${CMAKE_CURRENT_SOURCE_DIR}/AbortController.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/AbortSignal.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/AbstractWorker.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ApplicationCache.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Attr.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/AudioTrack.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/AudioTrackList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/BarProp.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/BeforeUnloadEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/BroadcastChannel.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/CanvasRenderingContext2D.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/CDataSection.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/CharacterData.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ChildNode.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/CloseEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Comment.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/CustomElementRegistry.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/CustomEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DataTransfer.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DataTransferItem.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DataTransferItemList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DedicatedWorkerGlobalScope.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Document.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DocumentAndElementEventHandlers.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DocumentFragment.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DocumentType.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DOMImplementation.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DOMString.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DOMStringList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DOMStringMap.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DOMTokenList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DragEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ElementContentEditable.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ErrorEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Event.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/EventHandler.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/EventSource.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/EventTarget.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/External.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/GlobalEventHandlers.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HashChangeEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/History.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLAllCollection.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLAnchorElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLAreaElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLAudioElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLBaseElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLBodyElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLBRElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLButtonElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLCanvasElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLCollection.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLDataElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLDataListElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLDetailsElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLDialogElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLDirectoryElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLDivElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLDListElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLEmbedElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLFieldSetElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLFontElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLFormControlsCollection.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLFormElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLFrameElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLFrameSetElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLHeadElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLHeadingElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLHRElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLHtmlElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLHyperlinkElementUtils.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLIFrameElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLImageElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLInputElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLLabelElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLLegendElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLLIElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLLinkElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLMapElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLMarqueeElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLMediaElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLMenuElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLMetaElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLMeterElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLModElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLObjectElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLOListElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLOptGroupElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLOptionElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLOptionsCollection.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLOutputElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLParagraphElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLParamElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLPictureElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLPreElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLProgressElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLQuoteElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLScriptElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLSelectElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLSlotElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLSourceElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLSpanElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLStyleElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTableCaptionElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTableCellElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTableColElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTableElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTableRowElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTableSectionElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTemplateElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTextAreaElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTineElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTitleElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLTrackElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLUListElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTMLVideoElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ImageBitmap.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ImageBitmapRenderingContext.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Location.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/MediaError.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/MessageChannel.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/MessageEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/MessagePort.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/MimeTypeArray.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/MimeType.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/MutationObserver.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/MutationRecord.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NamedNodeMap.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NavigatorConcurrentHardware.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NavigatorContentUtils.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NavigatorCookies.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Navigator.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NavigatorID.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NavigatorLanguage.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NavigatorOnLine.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NavigatorPlugins.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Node.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NodeFilter.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NodeIterator.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NodeList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NoncedElement.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NonDocumentTypeChildNode.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NonElementParentNode.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/OffscreenCanvas.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/OffscreenCanvasRenderingContext2D.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/PageTransitionEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ParentNode.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/PluginArray.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Plugin.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/PopStateEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ProcessingInstruction.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/PromiseRejectionEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Range.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ShadowRoot.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/SharedWorkerGlobalScope.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/SharedWorker.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Storage.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/StorageEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Slotable.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Text.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TextTrackCue.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TextTrackCueList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TextTrack.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TextTrackList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TimeRanges.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TrackEvent.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TreeWalker.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ValidityState.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/VideoTrack.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/VideoTrackList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/WebSocket.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/WindowEventHandlers.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Window.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/WindowLocalStorage.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/WindowOrWorkerGlobalScope.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/WindowSessionStorage.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/WorkerGlobalScope.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Worker.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/WorkerLocation.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/WorkerNavigator.hpp
)
target_link_libraries(DOM
	PUBLIC
)
set_target_properties(DOM PROPERTIES LINKER_LANGUAGE CXX)
